[gd_scene load_steps=5 format=3 uid="uid://dg4riaq8sxtsv"]

[ext_resource type="Script" uid="uid://boni1mvd0i416" path="res://Player/Weapons/rocket_luncher.gd" id="1_4w11i"]
[ext_resource type="Texture2D" uid="uid://dokswxnxdx5vn" path="res://Textures/test/minigun.png" id="1_qjd0b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fd8mq"]
radius = 339.013

[sub_resource type="CircleShape2D" id="CircleShape2D_1kmuo"]
radius = 491.123

[node name="RocketLuncher" type="Node2D"]
script = ExtResource("1_4w11i")

[node name="RocketLuncherTimer" type="Timer" parent="."]

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_fd8mq")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_qjd0b")

[node name="OCBoomingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OCBoomingArea"]
shape = SubResource("CircleShape2D_1kmuo")

[connection signal="over_charge" from="." to="." method="_on_over_charge"]
[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="RocketLuncherTimer" to="." method="_on_rocket_luncher_timer_timeout"]
